[package]
name = "kilo-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.18.0"
clap = { version = "4.5.41", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
reqwest = { version = "0.12.22", features = ["blocking", "multipart", "stream"] }
colored = "3.0.0"
rpassword = "7.4.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
scraper = "0.23.1"
crossterm = "0.29.0"
